added resume link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Im a <b class="orange">Frontend Developer</b> with a strong passion for creating beautiful web applications that provide a great user experience.
             <br />
             Here's a bit more
-            <b class="orange click" onclick="toggleModal()">about me dont forget resume link</b>.
+            <b class="orange click" onclick="toggleModal()">about me</b>.
           </p>
           <div class="social__list">
             <a
@@ -87,7 +87,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="http://google.com"
+              href="./assets/James Rhoe.pdf"
               target="_blank"
               class="social__link click"
             >
@@ -430,10 +430,11 @@
               Contact
             </a>
             <a
-              href=""
+              href="./assets/James Rhoe.pdf"
+              target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
-              Resume dont for get this
+              Resume
             </a>
           </div>
           <div class="footer__copyright">Copyright © 2024 James Rhoe</div>
