added praxeum website

--- a/index.html
+++ b/index.html
@@ -244,6 +244,33 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
+                  src="./assets/PraxeumProject.jpg"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__wrapper--bg">
+                  <div class="project__description">
+                    <h3 class="project__description--title">
+                      The Praxeum
+                    </h3>
+                    <h4 class="project__description--sub-title">
+                      HTML, CSS, JavaScript, Jquery
+                    </h4>
+                    <p class="project__description--para">
+                      Responsive application for The Praxeum. Contiued deveolopment fulfilling feature requests such as user sign-ups and appointment scheduling.
+                    </p>
+                    <div class="project__desciption--links">
+                      <a href="https://thepraxeum.com/" target="_blank" class="project__description--link">
+                        <i class="fa-solid fa-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
                   src="./assets/Apple Clone Project.png"
                   class="project__img"
                   alt=""
@@ -301,7 +328,7 @@
                 </div>
               </div>
             </li>
-            <li class="project">
+            <!-- <li class="project">
               <div class="project__wrapper">
                 <img
                   src="./assets/Brainwave Clone Project.png"
@@ -330,41 +357,11 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/MoviesHD Project.png"
-                  class="project__img"
-                  alt=""
-                />
-                <div class="project__wrapper--bg">
-                  <div class="project__description">
-                    <h3 class="project__description--title">
-                      Movies HD
-                    </h3>
-                    <h4 class="project__description--sub-title">
-                      HTML, CSS, JavaScript, React
-                    </h4>
-                    <p class="project__description--para">
-                      Fully responsive movie and tv-show search. Supports filtering by release date and alphabetically. Accesing backend API to retrieve list of movies.
-                    </p>
-                    <div class="project__desciption--links">
-                      <a href="https://github.com/JRhoe/moviesHD" target="_blank" class="project__description--link">
-                        <i class="fa-brands fa-github"></i>
-                      </a>
-                      <a href="https://movieshd-72b031694b40.herokuapp.com/" target="_blank" class="project__description--link">
-                        <i class="fa-solid fa-link"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li class="project">
-              <div class="project__wrapper">
-                <img
-                  src="./assets/Zoom Clone Project.png"
+                  src="./assets/Zoom Clone Project.jpg"
                   class="project__img"
                   alt=""
                 />
