--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <i class="fa-brands fa-github"></i>
             </a>
             <a
-              href="./assets/James Rhoe.pdf"
+              href="./assets/James Rhoe Resume.pdf"
               target="_blank"
               class="social__link click"
             >
@@ -427,7 +427,7 @@
               Contact
             </a>
             <a
-              href="./assets/James Rhoe.pdf"
+              href="./assets/James Rhoe Resume.pdf"
               target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
