added gss to projects and updated resume

--- a/index.html
+++ b/index.html
@@ -244,6 +244,33 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
+                  src="./assets/guardianSagaProject.jpg"
+                  class="project__img"
+                  alt=""
+                />
+                <div class="project__wrapper--bg">
+                  <div class="project__description">
+                    <h3 class="project__description--title">
+                      Guardian Saga Support
+                    </h3>
+                    <h4 class="project__description--sub-title">
+                      HTML, CSS, JavaScript, Next.js, Vercel
+                    </h4>
+                    <p class="project__description--para">
+                      Commercial application for Guardian Saga Support. Fully responsive. Reusable components to promote scalability. Features: animations, carousels, dropdowns, animated timeline, application submission.
+                    </p>
+                    <div class="project__desciption--links">
+                      <a href="https://www.guardiansaga.support/" target="_blank" class="project__description--link">
+                        <i class="fa-solid fa-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
                   src="./assets/PraxeumProject.jpg"
                   class="project__img"
                   alt=""
@@ -257,7 +284,7 @@
                       HTML, CSS, JavaScript, Jquery
                     </h4>
                     <p class="project__description--para">
-                      Responsive application for The Praxeum. Contiued deveolopment fulfilling feature requests such as user sign-ups and appointment scheduling.
+                      Commercial application for The Praxeum. Fully responsive. Collaborated with writers to ensure meaningful content. Continued development fulfilling feature requests. Features: user sign-ups, appointment scheduling, popups, announcement banners
                     </p>
                     <div class="project__desciption--links">
                       <a href="https://thepraxeum.com/" target="_blank" class="project__description--link">
@@ -278,13 +305,13 @@
                 <div class="project__wrapper--bg">
                   <div class="project__description">
                     <h3 class="project__description--title">
-                      iPhone Website (clone)
+                      iPhone 15
                     </h3>
                     <h4 class="project__description--sub-title">
                       HTML, CSS, JavaScript, React, TypeScript, Tailwind
                     </h4>
                     <p class="project__description--para">
-                      Clone of the iPhone 15 product website. Complete with animations, video background, and a 3D render of the iPhone.
+                      Clone of the iPhone 15 product website. Complete with animations, video background, and a 3D render of the iPhone. (Personal Project) 
                     </p>
                     <div class="project__desciption--links">
                       <a href="https://github.com/JRhoe/Apple-Clone" target="_blank" class="project__description--link">
@@ -308,13 +335,13 @@
                 <div class="project__wrapper--bg">
                   <div class="project__description">
                     <h3 class="project__description--title">
-                      Zoom (clone)
+                      Zoom
                     </h3>
                     <h4 class="project__description--sub-title">
                       HTML, CSS, JavaScript, Next JS, Tailwind
                     </h4>
                     <p class="project__description--para">
-                      Clone of a zoom style website. Supports account creation, video meetings, multiple participants, meeting scheduling. Give it a try!
+                      Clone of a zoom style website. Supports account creation, video meetings, multiple participants, meeting scheduling. Give it a try! (Personal Project) 
                     </p>
                     <div class="project__desciption--links">
                       <a href="https://github.com/JRhoe/Zoom-clone" target="_blank" class="project__description--link">
@@ -338,13 +365,13 @@
                 <div class="project__wrapper--bg">
                   <div class="project__description">
                     <h3 class="project__description--title">
-                      Library (E-Commerce)
+                      Library
                     </h3>
                     <h4 class="project__description--sub-title">
                       HTML, CSS, JavaScript, React
                     </h4>
                     <p class="project__description--para">
-                      E-Commerce website, includes listing all books and supports dynamic filtering by price and rating.
+                      E-Commerce website, includes listing all books and supports dynamic filtering by price and rating. (Personal Project) 
                     </p>
                     <div class="project__desciption--links">
                       <a href="https://github.com/JRhoe/Library/" target="_blank" class="project__description--link">
