updated background image for guardian saga support

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="title">Hey</h1>
           <h1 class="title orange">I'm James.</h1>
           <p class="header__para">
-            Im a <b class="orange">Frontend Developer</b> with a strong passion for creating beautiful web applications that provide a great user experience.
+            I'm a <b class="orange">Frontend Developer</b> with a strong passion for creating beautiful web applications that provide a great user experience.
             <br />
             Here's a bit more
             <b class="orange click" onclick="toggleModal()">about me</b>.
