updated resume and apple project

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                       iPhone 15
                     </h3>
                     <h4 class="project__description--sub-title">
-                      HTML, CSS, JavaScript, React, TypeScript, Tailwind
+                      HTML, CSS, JavaScript, React, Tailwind
                     </h4>
                     <p class="project__description--para">
                       Clone of the iPhone 15 product website. Complete with animations, video background, and a 3D render of the iPhone. (Personal Project) 
