updated resume changed to light theme by default

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       })();
     </script>
   </head>
-  <body onmousemove="moveBackground(event)" class="dark-theme">
+  <body onmousemove="moveBackground(event)">
     <section id="landing-page">
       <nav>
         <figure>
