--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="nav__link--list">
           <li class="nav__link" onclick="toggleModal()">
             <a
-              href="#"
+              href="#modalContact"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >About</a
             >
@@ -46,7 +46,7 @@
           </li>
           <li class="nav__link" onclick="toggleModal()">
             <a
-              href="#"
+              href="#modalContact"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Contact</a
             >
@@ -69,7 +69,7 @@
             I'm a <b class="orange">Frontend Developer</b> with a strong passion for creating beautiful web applications that provide a great user experience.
             <br />
             Here's a bit more
-            <b class="orange click" onclick="toggleModal()">about me</b>.
+            <a href="#modalContact"><b class="orange click" onclick="toggleModal()">about me</b></a>.
           </p>
           <div class="social__list">
             <a
@@ -96,7 +96,7 @@
           </div>
         </div>
       </header>
-      <a href="#">
+      <a href="#modalContact">
         <button class="mail__btn click" onclick="toggleModal()">
           <i class="fa-solid fa-envelope"></i>
         </button>
@@ -185,7 +185,7 @@
             </figure>
           </div>
         </div>
-        <div class="modal__half modal__contact">
+        <div id="modalContact" class="modal__half modal__contact">
           <i
             class="fa-solid fa-xmark modal__exit click"
             onclick="toggleModal()"
@@ -448,7 +448,7 @@
             </a>
             <a
               onclick="toggleModal()"
-              href="#"
+              href="#modalContact"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Contact
